syntax = "proto3";

package auth;

service AuthService {
    rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {}
    rpc UserValidate(UserValidateRequest) returns (UserValidateResponse) {}
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserLoginResponse {
    int32 status = 1;
    repeated string error = 2; 
    string token = 3;
}

message UserValidateRequest {
    string id = 1;
    string email = 2;
}

message UserValidateResponse {
    int32 status = 1;
    repeated string error = 2;
    string id = 3;
    string name = 4;
    string email = 5;
    string createdAt = 6;
    repeated string roles = 7; 
}